--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="loader.css">
+<style type="text/css">
+body{
+  margin:0px;
+  padding:0px;
+}
+</style>
 </head>
 
 <body onload="myFunction()">
@@ -10,7 +16,7 @@
   <div class="progress-line"></div>
   	<div id="wrap_video">
       <div id="video_box">
-  			<video id="v0" tabindex="0" autoplay>
+  			<video width="1280px" height="630" id="v0" tabindex="0" autoplay>
 		      <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="images/PARTICLE LOGO.mp4"></source>       
 		      <p>Sorry, your browser does not support the &lt;video&gt; element.</p>
   			</video>
@@ -18,21 +24,24 @@
   	</div>
   </div>
 </div>
+
 <div id="myDiv">
-  <div>
-    <div class="thumb">
-      <a href="#myAnchor">
-        <div id="left"></div>
-        <div id="right"></div>
-        <span>HELLO</span>
-      </a>
-    </div>
+  <div id="mylogo"></div>
+  <div id="name">
+    <img src="images/name.gif">
+  </div>
+  <div class="thumb">
+    <a href="#myAnchor">
+      <div id="left"></div>
+      <div id="right"></div>
+      <span>HELLO</span>
+    </a>
   </div>
 </div>
 <script>
 var myVar;
 function myFunction() {
-    myVar = setTimeout(showPage, 5000);
+    myVar = setTimeout(showPage, 1000);
 }
 
 function showPage() {
