--- a/index.html
+++ b/index.html
@@ -29,21 +29,20 @@
 
 <div id="myDiv">
 	<header class="cd-header">
-		<a href="#0" class="cd-logo"><img src="images/cd-logo.svg" alt="Logo"></a>
 		<a href="#0" class="cd-3d-nav-trigger">
 			Menu
 			<span></span>
 		</a>
 	</header> <!-- .cd-header -->
 	
-	<div>
+	<main>
 		<div id="mylogo"><img src="images/MyLogo3.png"></div>
 		<div class="thumb">
 		<a href="#myAnchor">
 		  <span>HELLO</span>
 		</a>
 		</div>
-	</div>
+	</main>
 	
 	<nav class="cd-3d-nav-container">
 		<ul class="cd-3d-nav">
@@ -70,21 +69,11 @@
 
 		<span class="cd-marker color-1"></span>	
 	</nav> <!-- .cd-3d-nav-container -->
-
-
-
-
-
-
-
-
-
-
 </div>
 <script>
 var myVar;
 function myFunction() {
-    myVar = setTimeout(showPage, 5000);
+    myVar = setTimeout(showPage, 500);
 }
 
 function showPage() {
