--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 
 <body onload="myFunction()">
 <!-- Loader with progress line and Loading video -->
-<div id="loader">
-  <div class="progress-line"></div>
-  	<div id="wrap_video">
-      <div id="video_box">
-  			<video width="1366px" height="630" id="v0" tabindex="0" autoplay>
-		      <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="images/PARTICLE LOGO.mp4"></source>       
-		      <p>Sorry, your browser does not support the &lt;video&gt; element.</p>
-  			</video>
-      </div>
-  	</div>
-  </div>
+<div style="background-color: white;">
+	<div id="loader">
+	  <div class="progress-line"></div>
+	  	<div id="wrap_video">
+	      <div id="video_box">
+	  			<video width="1366px" height="630" id="v0" tabindex="0" autoplay>
+			      <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="images/PARTICLE LOGO.mp4"></source>       
+			      <p>Sorry, your browser does not support the &lt;video&gt; element.</p>
+	  			</video>
+	      </div>
+	  	</div>
+	  </div>
+	</div>
 </div>
 
 <div id="myDiv">
@@ -66,7 +68,7 @@
 				<p>I'M VISHNU</p>
 			</div>
 		</div>
-<!-- 	div class="thumb">
+		<!-- div class="thumb">
 			<a href="#myAnchor">
 			  <span>HELLO</span>
 			</a>
@@ -79,7 +81,7 @@
 <script>
 var myVar;
 function myFunction() {
-    myVar = setTimeout(showPage, 1000);
+    myVar = setTimeout(showPage, 5000);
 }
 
 function showPage() {
