Parallax effect image

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 		<span class="cd-marker color-1"></span>
 	</nav> <!-- .cd-3d-nav-container -->
-	<main>
+	<div class="parallax">
 		<!-- <div id="mylogo"><img src="images/MyLogo3.png"></div> -->
 		<div id="name">
 			<div id="banner">
@@ -80,13 +80,16 @@
 				<span class="typed-cursor"></span>
 			</div>
 		</div>
+
+		
+
 		<!-- div class="thumb">
 			<a href="#myAnchor">
 			  <span>HELLO</span>
 			</a>
 		</div> -->
 
-	</main>
+	</div>
 
 
 </div>
