--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/navbar.css">
 <!-- 	<link rel="stylesheet" href="css/bootstrap.min.css"> -->
-	<link rel="prefetch" href="images/fpage.png">
+	<link rel="prefetch" href="images/back.jpg">
 	<script src="js/modernizr.js"></script>
 	<script src="js/typed.js"></script>
 <script>
   document.addEventListener('DOMContentLoaded', function(){
       Typed.new('.element', {
-        strings: ["developer", "designer", "Vishnu"],
+        strings: ["a developer.", "a designer.", "Vishnu"],
         typeSpeed: 50,
 				backDelay: 1000
       });
   });
+	function func() {
+		alert('hey!');
+	}
 </script>
 </head>
 
@@ -39,7 +42,7 @@
 	</div>
 </div>
 
-<div id="myDiv">
+<div id="myDiv" onload="func()">
 	<header class="cd-header">
 		<a href="#0" class="cd-3d-nav-trigger">
 			Menu
@@ -75,13 +78,13 @@
 		<!-- <div id="mylogo"><img src="images/MyLogo3.png"></div> -->
 		<div id="name">
 			<div id="banner">
-				<span id="iam">I'am</span>
+				<span id="iam">I'm</span>
 				<span class="element"></span>
 				<span class="typed-cursor"></span>
 			</div>
 		</div>
 
-		
+
 
 		<!-- div class="thumb">
 			<a href="#myAnchor">
@@ -96,7 +99,7 @@
 <script>
 var myVar;
 function myFunction() {
-    myVar = setTimeout(showPage, 0);
+    myVar = setTimeout(showPage, 5000);
 }
 
 function showPage() {
