--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 
 		<span class="cd-marker color-1"></span>
 	</nav> <!-- .cd-3d-nav-container -->
-	<div class="parallax"  id="banner">
+	<div class="parallax"  id="banner"></div>
 		<!-- <div id="mylogo"><img src="images/MyLogo3.png"></div> -->
 		<div id="name">
 			<div>
-				<span id="iam">I'm</span>
+				<span id="iam">I'm </span>
 				<span class="element"></span>
 				<span class="typed-cursor"></span>
 			</div>
