parallax effect added

--- a/index.html
+++ b/index.html
@@ -63,14 +63,17 @@
 
 		<span class="cd-marker color-1"></span>
 	</nav> <!-- .cd-3d-nav-container -->
-	<div class="parallax"  id="banner"></div>
-		<!-- <div id="mylogo"><img src="images/MyLogo3.png"></div> -->
+	<div class="parallax"  id="banner">
 		<div id="name">
 			<div>
 				<span id="iam">I'm </span>
 				<span class="element"></span>
 				<span class="typed-cursor"></span>
 			</div>
+		</div>
+	</div>
+		<div class="parallax2"  id="banner2">
+			<div id="mylogo"><img src="images/MyLogo3.png"></div>
 		</div>
 
 
