--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/loader.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/navbar.css">
+	<link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!-- 	<link rel="stylesheet" href="css/bootstrap.min.css"> -->
 	<link rel="prefetch" href="images/back.jpg">
 	<script src="js/modernizr.js"></script>
@@ -16,12 +17,12 @@
 
 <body onload="myFunction()">
 <!-- Loader with progress line and Loading video -->
-<div style="background-color: white;">
+<div>
 	<div id="loader">
 	  <div class="progress-line"></div>
 	  	<div id="wrap_video">
 	      <div id="video_box">
-	  			<video width="1366px" height="630" id="v0" tabindex="0" autoplay>
+	  			<video id="v0" tabindex="0" autoplay>
 			      <source type="video/mp4; codecs=&quot;avc1.42E01E, mp4a.40.2&quot;" src="images/PARTICLE LOGO.mp4"></source>
 			      <p>Sorry, your browser does not support the &lt;video&gt; element.</p>
 	  			</video>
@@ -32,57 +33,53 @@
 </div>
 
 <div id="myDiv" onload="func()">
-	<header class="cd-header">
-		<a href="#0" class="cd-3d-nav-trigger">
-			Menu
-			<span></span>
-		</a>
-	</header> <!-- .cd-header -->
-	<nav class="cd-3d-nav-container">
-		<ul class="cd-3d-nav">
-			<li class="cd-selected">
-				<a href="#0">Dashboard</a>
-			</li>
 
-			<li>
-				<a onclick="window.location.hash = '#go';">Projects</a>
-			</li>
-
-			<li>
-				<a href="#0">Images</a>
-			</li>
-
-			<li>
-				<a href="#0">Settings</a>
-			</li>
-
-			<li>
-				<a href="#0">New</a>
-			</li>
-		</ul> <!-- .cd-3d-nav -->
-
-		<span class="cd-marker color-1"></span>
-	</nav> <!-- .cd-3d-nav-container -->
 	<div class="parallax"  id="banner">
+		<div>
+			<nav class="menu">
+			  <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open" />
+			  <label class="menu-open-button" for="menu-open">
+			    <span class="hamburger hamburger-1"></span>
+			    <span class="hamburger hamburger-2"></span>
+			    <span class="hamburger hamburger-3"></span>
+			  </label>
+
+			  <a href="#" class="menu-item"> <i class="fa fa-bar-chart"></i> </a>
+			  <a href="#" class="menu-item"> <i class="fa fa-plus"></i> </a>
+			  <a href="#" class="menu-item"> <i class="fa fa-heart"></i> </a>
+			  <a href="#" class="menu-item"> <i class="fa fa-envelope"></i> </a>
+
+			</nav>
+			<!-- filters -->
+			<svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+			    <defs>
+			      <filter id="shadowed-goo">
+			          
+			          <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
+			          <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+			          <feGaussianBlur in="goo" stdDeviation="3" result="shadow" />
+			          <feColorMatrix in="shadow" mode="matrix" values="0 0 0 0 0  0 0 0 0 0  0 0 0 0 0  0 0 0 1 -0.2" result="shadow" />
+			          <feOffset in="shadow" dx="1" dy="1" result="shadow" />
+			          <feComposite in2="shadow" in="goo" result="goo" />
+			          <feComposite in2="goo" in="SourceGraphic" result="mix" />
+			      </filter>
+			      <filter id="goo">
+			          <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
+			          <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
+			          <feComposite in2="goo" in="SourceGraphic" result="mix" />
+			      </filter>
+			    </defs>
+			</svg>
+		</div>
 		<div id="name">
-			<div>
-				<span id="iam">I'm </span>
-				<span class="element"></span>
-				<span class="typed-cursor"></span>
-			</div>
+			<span id="iam">I'm </span>
+			<span class="element"></span>
+			<span class="typed-cursor"></span>
 		</div>
 	</div>
 		<div class="parallax2"  id="banner2">
 			<div id="mylogo"><img src="images/MyLogo3.png"></div>
 		</div>
-
-
-
-		<!-- div class="thumb">
-			<a href="#myAnchor">
-			  <span>HELLO</span>
-			</a>
-		</div> -->
 
 	</div>
 
@@ -91,23 +88,13 @@
 <script>
 var myVar;
 function myFunction() {
-    myVar = setTimeout(showPage, 0);
+    myVar = setTimeout(showPage, 10);
 }
 
 function showPage() {
   document.getElementById("loader").style.display = "none";
   document.getElementById("myDiv").style.display = "block";
 }
-
-function preload(arrayOfImages) {
-    $(arrayOfImages).each(function(){
-        $('<img/>')[0].src = this;
-    });
-}
-
-preload([
-    'images/fpage.png'
-]);
 </script>
 <script>
   document.addEventListener('DOMContentLoaded', function(){
