--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
         <!--Import Google Icon Font-->
-        <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Josefin+Slab|Yesteryear|Alex+Brush" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Josefin+Slab|Yesteryear|Allura" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
         <!--Import materialize.css-->
         <link rel="stylesheet" href="css/materialize.min.css">
@@ -115,11 +115,11 @@
                                 </div>
                                 <div class="social-links center-align">
                                     <p>Find me at</p>
-                                    <button class="btn-floating btn-large grey lighten-2"><img src="png/linkedin.png" alt="linkedin"></button>
-                                    <button class="btn-floating btn-large cyan"><img src="png/github.png" alt="github"></button>
-                                    <button class="btn-floating btn-large grey lighten-4"><img src="png/facebook.png" alt="facebook"></button>
-                                    <button class="btn-floating btn-large cyan"><img src="png/instagram.png" alt="instagram"></button>
-                                    <button class="btn-floating btn-large grey lighten-2"><img src="png/stack.png" alt="stackoverflow"></button>
+                                    <a href="https://www.linkedin.com/in/vishnu-dev/"><button class="btn-floating btn-large grey lighten-2"><img src="png/linkedin.png" alt="linkedin"></button></a>
+                                    <a href="https://github.com/vishnu-dev/"><button class="btn-floating btn-large cyan"><img src="png/github.png" alt="github"></button></a>
+                                    <a href="https://www.facebook.com/devvishnuu/"><button class="btn-floating btn-large grey lighten-4"><img src="png/facebook.png" alt="facebook"></button></a>
+                                    <a href="https://www.instagram.com/iamvishnudev/"><button class="btn-floating btn-large cyan"><img src="png/instagram.png" alt="instagram"></button></a>
+                                    <a href="https://stackoverflow.com/users/5120049/vishnudev/"><button class="btn-floating btn-large grey lighten-2"><img src="png/stack.png" alt="stackoverflow"></button></a>
                                     <h4 class="social-text pulse myhide"></h4>
                                 </div>
                             </div>
