Git badge added and improved photo gallery

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         </div>
 
         <div class="row content" id="contents">
+            <a class="hide-on-small-only" href="https://github.com/vishnu-dev">
+                <img style="position: absolute; top: 0; right: 0; border: 0; z-index: 99" 
+                     src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" 
+                     alt="Find me on GitHub"
+                     target="_blank"></a>
             <div id="navbar" class="col s2 m1 l1 xl1">
                 <a class="row nav-item" href="#home">
                     <div class="nav-logo">
@@ -86,10 +91,10 @@
             <div class="row wrapper">
                 <div class="col s10 m11 l11 xl11 offset-s2 offset-m1 offset-l1 offset-xl1 sec-1" id="home">
                     <div class="box-center">
-                        <div class="flow-text heading-big">
-                            <p class="font-bold" id="greet">Hello!</p>
-                            <p class="heading-big" id="intro">I'm Vishnu</p>
-                            <p class="font-bold" id="domain">Developer | Designer</p>
+                        <div class="heading-big">
+                            <text class="font-bold" id="greet">Hello!</text><br>
+                            <text class="heading-big" id="intro">I'm Vishnu</text><br>
+                            <text class="font-bold" id="domain">Developer | Designer</text><br>
                         </div>
                     </div>
                 </div>
@@ -133,42 +138,62 @@
                     <div class="container col s10 m11 l11 xl11 offset-s2 offset-m1 offset-l1 offset-xl1" id="fix">
                         <div class="row">
                             <h1 class="heading-big center-align">Experience</h1>
-                            <div class="col m3 s11 offset-m2">
+                            <div class="col m4 s11 offset-m4">
                                 <div class="card js-tilt row row-eq-height" data-tilt>
                                     <div class="col m4 no-padding" id="logo">
                                         <div class="card-image">
-                                            <img src="png/crowdproduct.png">
-                                        </div>
-                                    </div>
-                                    <div class="col m8 no-padding">
-                                        <div class="card-content">
-                                            <span class="card-title bold">CrowdProduct</span>
-                                            <p class="bold">
-                                                Web Developement Intern
-                                            </p>
-                                            <p>Oct 2016 - Dec 2016</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col m3 s11 offset-m2">
-                                <div class="card js-tilt row row-eq-height" data-tilt>
-                                    <div class="col m4 no-padding" id="logo">
-                                        <div class="card-image">
-                                            <img src="png/sumyag.png">
+                                            <img src="png/SumyagLogoFinalColored.png">
                                         </div>
                                     </div>
                                     <div class="col m8 no-padding">
                                         <div class="card-content">
                                             <span class="card-title bold">Sumyag</span>
                                             <p class="bold">
-                                                DataScience and IoT Intern
+                                                Data Scientist
                                             </p>
-                                            <p>Jan 2018 - May 2018</p>
+                                            <p>July 2018 - Present</p>
                                         </div>
                                     </div>
                                 </div>
-                            </div>                                                                                    
+                            </div>           
+                            <div class="row">
+                                <div class="col m3 s11 offset-m2">
+                                    <div class="card js-tilt row row-eq-height" data-tilt>
+                                        <div class="col m4 no-padding" id="logo">
+                                            <div class="card-image">
+                                                <img src="png/crowdproduct.png">
+                                            </div>
+                                        </div>
+                                        <div class="col m8 no-padding">
+                                            <div class="card-content">
+                                                <span class="card-title bold">CrowdProduct</span>
+                                                <p class="bold">
+                                                    Web Developement Intern
+                                                </p>
+                                                <p>Oct 2016 - Dec 2016</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col m3 s11 offset-m2">
+                                    <div class="card js-tilt row row-eq-height" data-tilt>
+                                        <div class="col m4 no-padding" id="logo">
+                                            <div class="card-image">
+                                                <img src="png/sumyag.png">
+                                            </div>
+                                        </div>
+                                        <div class="col m8 no-padding">
+                                            <div class="card-content">
+                                                <span class="card-title bold">Sumyag</span>
+                                                <p class="bold">
+                                                    DataScience and IoT Intern
+                                                </p>
+                                                <p>Jan 2018 - May 2018</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="row center-align skills">
                             <h1 class="heading-big">Skills</h1>
@@ -366,27 +391,31 @@
                 </div>
             </section>
             <section class="wrapper" id="photography">
-                <!-- <div class="hide-on-small-only" id="background"></div> -->
-                <div class="row"></div>
                 <div class="row">
-                    <div class="col s10 m11 l11 xl11 offset-s2 offset-m1 offset-l1 offset-xl1" id="gallery">
-                            <div id="cp_widget_095d1c65-a511-449d-9480-152683968370">...</div><script type="text/javascript">
-                                var cpo = []; cpo["_object"] ="cp_widget_095d1c65-a511-449d-9480-152683968370"; cpo["_fid"] = "A8KAETun1QrL";
-                                var _cpmp = _cpmp || []; _cpmp.push(cpo);
-                                (function() { var cp = document.createElement("script"); cp.type = "text/javascript";
-                                cp.async = true; cp.src = "//www.cincopa.com/media-platform/runtime/libasync.js";
-                                var c = document.getElementsByTagName("script")[0];
-                                c.parentNode.insertBefore(cp, c); })(); </script>
+                    <div class="col s10 m11 l11 xl11 offset-s2 offset-m1 offset-l1 offset-xl1">
+                        <h1 class="heading-big">Photography</h1>
+                        <div class="hide-on-small-only large carousel">
+                            <a class="carousel-item" href="#one!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/1.jpg"></a>
+                            <a class="carousel-item" href="#two!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/2.jpg"></a>
+                            <a class="carousel-item" href="#three!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/3.jpg"></a>
+                            <a class="carousel-item" href="#four!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/4.jpg"></a>
+                            <a class="carousel-item" href="#five!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/5.jpg"></a>
+                            <a class="carousel-item" href="#six!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/6.jpg"></a>
+                            <a class="carousel-item" href="#seven!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/7.jpg"></a>
+                            <a class="carousel-item" href="#eight!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/8.jpg"></a>
+                        </div>
+                        <div class="show-on-small-only carousel">
+                            <a class="carousel-item" href="#one!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/1.jpg"></a>
+                            <a class="carousel-item" href="#two!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/2.jpg"></a>
+                            <a class="carousel-item" href="#three!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/3.jpg"></a>
+                            <a class="carousel-item" href="#four!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/4.jpg"></a>
+                            <a class="carousel-item" href="#five!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/5.jpg"></a>
+                            <a class="carousel-item" href="#six!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/6.jpg"></a>
+                            <a class="carousel-item" href="#seven!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/7.jpg"></a>
+                            <a class="carousel-item" href="#eight!"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/8.jpg"></a>
+                        </div>
                     </div>
                 </div>
-                <!-- <div class="hide-on-med-and-up col s10 m11 l11 xl11 offset-s2 offset-m1 offset-l1 offset-xl1">
-                    <div class="row">
-                        <div class="col s11"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/DSC03065_compressed.jpg"/></div>
-                        <div class="col s11"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/DSC04148_compressed.jpg"/></div>
-                        <div class="col s11"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/DSC05615_compressed.jpg"/></div>
-                        <div class="col s11"><img src="https://s3.ap-south-1.amazonaws.com/vishnudevphotos/Photography/DSC04008_compressed.jpg"/></div>
-                    </div>                    
-                </div> -->
             </section>
         </div>
         <!--Import jQuery before materialize.js-->
@@ -402,11 +431,14 @@
         <script>
             $(document).ready(function(){
                 $('.modal').modal({'dismissable':false});
+                $('.carousel').carousel();
             });
+
             $('.js-tilt').tilt({
                 glare: true,
                 maxGlare: .2
             });
+
             $(".btn-large").hover(function () {
                 $(this).toggleClass("pulse");
                 var text = $(this).children("img").attr('alt');
