Shift to github pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="css/materialize.min.css">
         <link rel="stylesheet" href="css/magic.min.css">
         <link rel="stylesheet" href="css/devicon.min.css">
-        <link rel="stylesheet" href="custom.css">
+        <link rel="stylesheet" href="css/custom.css">
     </head>
 
     <body>
@@ -32,8 +32,8 @@
 
         <div class="row content" id="contents">
             <a class="hide-on-small-only" href="https://github.com/vishnu-dev">
-                <img style="position: absolute; top: 0; right: 0; border: 0; z-index: 99" 
-                     src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" 
+                <img style="position: absolute; top: 0; right: 0; border: 0; z-index: 99"
+                     src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png"
                      alt="Find me on GitHub"
                      target="_blank"></a>
             <div id="navbar" class="col s2 m1 l1 xl1">
@@ -105,17 +105,17 @@
                     <div class="col s10 m11 l11 xl11 offset-s2 offset-m1 offset-l1 offset-xl1 no-padding">
                         <div class="row" id="network-background">
                             <div class="col m6 no-padding hide-on-small-only" id="">
-                                <img class="potrait responsive-img" src="me.jpg" alt="Myself">
+                                <img class="potrait responsive-img" src="png/me.jpg" alt="Myself">
                             </div>
                             <div class="col m6" id="about">
                                 <h1 class="heading-big center-align">About Me</h1>
                                 <div class="container row hide-on-med-and-up">
                                     <div class="col s6 offset-s3 col-centered">
-                                        <img class="circle responsive-img" src="circle.jpg" alt="Myself">
+                                        <img class="circle responsive-img" src="png/circle.jpg" alt="Myself">
                                     </div>
                                 </div>
                                 <div class="valign-wrapper center-align">
-                                    <p>I'm a final year student at Sir M Visvesvaraya Institute of Technology 
+                                    <p>I'm a final year student at Sir M Visvesvaraya Institute of Technology
                                         and a passionate developer and designer.</p>
                                 </div>
                                 <div class="social-links center-align">
@@ -155,7 +155,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>           
+                            </div>
                             <div class="row">
                                 <div class="col m3 s11 offset-m2">
                                     <div class="card js-tilt row row-eq-height" data-tilt>
@@ -246,10 +246,10 @@
                             <div id="modal1" class="modal">
                                 <div class="modal-content">
                                     <h4>Copyright Notice</h4>
-                                    <p>© K Vishnudev and www.vishnudev.me, 2018. 
-                                        Unauthorized use and/or duplication of this material without express and 
-                                        written permission from this blog’s author and/or owner is strictly prohibited. 
-                                        Excerpts and links may be used, provided that full and clear credit is given to K Vishnudev and 
+                                    <p>© K Vishnudev and www.vishnudev.me, 2018.
+                                        Unauthorized use and/or duplication of this material without express and
+                                        written permission from this blog’s author and/or owner is strictly prohibited.
+                                        Excerpts and links may be used, provided that full and clear credit is given to K Vishnudev and
                                         www.vishnudev.me with appropriate and specific direction to the original content.</p>
                                 </div>
                                 <div class="modal-footer">
@@ -339,7 +339,7 @@
                                 <div class="row">
                                     <div class="col s11 m12 center-align">
                                         <div class="sketchfab-embed-wrapper">
-                                            <iframe height="300" src="https://sketchfab.com/models/b8089476052e48eb9ec43e09cc6d91b9/embed?autostart=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe> 
+                                            <iframe height="300" src="https://sketchfab.com/models/b8089476052e48eb9ec43e09cc6d91b9/embed?autostart=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
                                         </div>
                                     </div>
                                 </div>
@@ -359,7 +359,7 @@
                                     <img src="designs/13.jpg" alt="">
                                 </div>
                                 <div class="col s11 m6 no-padding design">
-                                    <img src="designs/14.jpg" alt="">                                                                        
+                                    <img src="designs/14.jpg" alt="">
                                 </div>
                                 <div class="col s11 m6 no-padding design">
                                     <img src="designs/8.jpg" alt="">
@@ -461,9 +461,9 @@
                     return this[0].ps;
                 }
             });
-            var words = ["C", "C++", "JavaScript", "Python", "HTML", 
-                         "NodeJS", "IoT", "Java", "SQL", "MongoDB", 
-                         "Bootstrap", "AdobePhotoshop", "Linux", 
+            var words = ["C", "C++", "JavaScript", "Python", "HTML",
+                         "NodeJS", "IoT", "Java", "SQL", "MongoDB",
+                         "Bootstrap", "AdobePhotoshop", "Linux",
                          "CSS", "AutodeskMaya"];
         </script>
         <script>
@@ -481,7 +481,7 @@
                     document.getElementById("light").style.display="block";
                 }
                 else
-                    document.getElementById("light").style.display="none"; 
+                    document.getElementById("light").style.display="none";
                 event.preventDefault();
                 if(temp != href){
                     $(".wrapper").fadeOut(500 ,redirectPage.bind(this, this.href));
